subprojects/swen430/src/test/resources/tests/valid/TypeEquals_Valid_21.while
[int|null] f([int] l) {
    return l;
}

void main() {
    print f([4]);
}
