subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_4.while
real f(int x) {
    return x;
}